--- a/servers/templates/index.html
+++ b/servers/templates/index.html
@@ -22,7 +22,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Roboto", sans-serif;}
   </div>
   <div class="w3-padding-64 w3-large w3-text-grey" style="font-weight:bold">
     <a href="#" class="w3-bar-item w3-button">MACROS</a>
-    <a href="#" class="w3-bar-item w3-button">ELEVATION/RISE INTENSITY</a>
+    <a href="elevation" class="w3-bar-item w3-button">ELEVATION/RIDE INTENSITY</a>
     <a href="#" class="w3-bar-item w3-button">DISTANCE TRAVELLED</a>
     <a href="activity_recap" class="w3-bar-item w3-button">ACTIVITY RECAP</a>
     <a href="moving_avg" class="w3-bar-item w3-button">MOVING AVERAGE</a>
