added dates for moving avg

--- a/servers/templates/moving_avg.html
+++ b/servers/templates/moving_avg.html
@@ -48,6 +48,8 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Roboto", sans-serif;}
   <div class="w3-display-container w3-container">
     <form action="" method = 'POST'>
     <p>Window size <input name = "window" /></p>
+    <p>Date 1 <input name = "date1" /></p>
+    <p>Date 2 <input name = "date2" /></p>
     <p><input type = "submit" /></p>
 </form>
     <div id='chart' class='chart'></div>
