moving avg changes

--- a/servers/templates/moving_avg.html
+++ b/servers/templates/moving_avg.html
@@ -10,6 +10,18 @@
 <style>
 .w3-sidebar a {font-family: "Roboto", sans-serif}
 body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Roboto", sans-serif;}
+div.form
+{
+    display: block;
+    text-align: center;
+}
+form
+{
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+}
 </style>
 </head>
 <body class="w3-content" style="max-width:1200px">
@@ -22,7 +34,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Roboto", sans-serif;}
   </div>
   <div class="w3-padding-64 w3-large w3-text-grey" style="font-weight:bold">
     <a href="#" class="w3-bar-item w3-button">MACROS</a>
-    <a href="elevation" class="w3-bar-item w3-button">ELEVATION/RIDE INTENSITY</a>
+    <a href="#" class="w3-bar-item w3-button">ELEVATION/RISE INTENSITY</a>
     <a href="#" class="w3-bar-item w3-button">DISTANCE TRAVELLED</a>
     <a href="activity_recap" class="w3-bar-item w3-button">ACTIVITY RECAP</a>
     <a href="moving_avg" class="w3-bar-item w3-button">MOVING AVERAGE</a>
@@ -46,15 +58,21 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Roboto", sans-serif;}
 
   <!-- Image header -->
   <div class="w3-display-container w3-container">
-    <form action="" method = 'POST'>
-    <p>Window size <input name = "window" /></p>
-    <p>Date 1 <input name = "date1" /></p>
-    <p>Date 2 <input name = "date2" /></p>
-    <p><input type = "submit" /></p>
-</form>
+   
     <div id='chart' class='chart'></div>
   </div>
+  <div class='form'>
+    <form action="" method = 'POST'>
+      <p>Window size</p>
+      <p><input name = "window" id = "window" /></p>
+      <p>Date 1</p>
+      <p><input name = "date1" /></p>
+      <p>Date 2</p>
+      <p><input name = "date2" /></p>
+      <p><input type = "submit" /></p>
+  </form>
 
+  </div>
   <!-- End page content -->
 </div>
 
